tests/NormalTests/paczka1/small_fuzzy/36018583.err
Error in line 4: inbDP8eF4 A428 69,4
Error in line 11: ZfimbHa7RFw A@36 @4,1
Error in line 10: snHCgWV A428 67,3
